test/errors/str2.qk

#OUTPUT
#Syntax Error: Invalid string variable.
# -> [14] str s2 = s100
#
#END

#RET 0

extern func puts(s:str)

func main -> int
    str s1 = "Hello!"
    str s2 = s100
    
    puts(s1)
    puts(s2)
    
    return 0
end
